app/assets/stylesheets/externals/antd-customization.scss
#app-root {
  display: flex;
  flex-direction: column;
  flex-grow: 1;
  min-height: 100%;

  .ant-layout-header {
    background: var(--header-background-color);
    border-bottom: 1px solid var(--border-color);
  }

  .ant-popover-inner, .ant-popover-inner-content {
    background: var(--background-color);
  }

  .popover-no-padding {
    .ant-popover-inner-content {
      padding: 8px 0;

      a {
        &:hover {
          text-decoration: none;
        }
      }

      ul {
        margin: 0;
      }
    }
  }

  .editable-cell {
    position: relative;
  }

  .editable-cell-value-wrap {
    padding: 4px 11px;
    cursor: pointer;
    border: 1px solid transparent;
    min-height: 32px;

    li {
      list-style-position: inside;
    }

    ul {
      li {
        list-style-type: disc;
      }
    }

    ol {
      li {
        list-style-type: decimal;
      }
    }

    // Hide the margin of the last <p> in HTML key translations.
    p:last-child {
      margin-bottom: 0;
    }
  }

  .editable-row:hover .editable-cell-value-wrap {
    border-color: var(--border-color-flashier);
  }

  .ant-table td {
    text-overflow: ellipsis;
  }

  .ant-menu-vertical .ant-menu-item:after, .ant-menu-vertical-left .ant-menu-item:after, .ant-menu-vertical-right .ant-menu-item:after, .ant-menu-inline .ant-menu-item:after {
    border-right-color: var(--blue-color);
  }

  .ant-menu-item > a:hover {
    color: var(--blue-color);
  }

  .ant-menu-item-selected > a, .ant-menu-item-selected > a:hover {
    color: var(--blue-color);
  }

  .ant-menu-item-selected {
    color: var(--blue-color);
    background: var(--primary-light-color);
  }

  .ant-menu-item:hover, .ant-menu-item-active, .ant-menu:not(.ant-menu-inline) .ant-menu-submenu-open, .ant-menu-submenu-active, .ant-menu-submenu-title:hover {
    color: var(--blue-color);
  }

  .ant-menu-submenu-selected {
    color: var(--blue-color);
  }

  .ant-menu-submenu-title > a {
    color: var(--background-color);
  }

  .ant-menu-submenu-selected .ant-menu-submenu-title > a {
    color: var(--blue-color);
  }

  .ant-menu-submenu-inline > .ant-menu-submenu-title:hover .ant-menu-submenu-arrow::before,
  .ant-menu-submenu-inline > .ant-menu-submenu-title:hover .ant-menu-submenu-arrow::after {
    transition-property: transform, top;
    background: var(--blue-color);
  }

  .ant-menu-submenu-selected > a {
    color: var(--blue-color);
    background: #f00;
  }

  .ant-menu-item > a, .ant-menu-submenu-title > a {
    text-decoration: none;
  }

  .ant-breadcrumb a {
    color: var(--blue-color);

    &:hover {
      text-decoration: underline;
    }
  }

  .ant-layout {
    // Fix content overflowing horizontally.
    overflow-x: hidden;
  }

  .ant-layout-header {
    height: 58px;
    line-height: 0;
  }

  // Remove inner borders from modals.
  .ant-modal-header {
    border-bottom: 0;
  }

  // Close icon otherwise not centered.
  .ant-modal-close-x {
    display: flex;
    align-items: center;
    justify-content: center;
  }

  .ant-modal-footer {
    border-top: 0;
  }

  .ant-modal-title {
    font-size: 22px;
    line-height: 40px;
  }

  .ant-table-tbody .ant-form-item-control {
    line-height: 0;
  }

  // Hide the loading indicator container because otherwise it still takes some
  // space after the loading indicator has been shown.
  .ant-btn-loading-icon {
    display: none;
  }

  .ant-btn-loading {
    .ant-btn-loading-icon {
      margin-right: 8px;
      display: inline;
    }
  }

  .ce-block__content {
    max-width: 100%;
  }

  .ce-toolbar__content {
    max-width: 100%;
  }

  .cdx-list__item {
    list-style: inherit;
  }

  .cdx-list--unordered {
    list-style: disc;
  }

  .cdx-list--ordered {
    list-style: decimal;
  }

  .ant-progress-status-success .ant-progress-bg {
    background-color: #52c41a;
  }

  .ant-tabs.ant-tabs-card .ant-tabs-card-bar .ant-tabs-tab {
    border-top: none;
    border-left: none;
    border-radius: 0;
    margin-right: 0;
  }

  .ant-list-item-meta-content {
    max-width: 100%;
  }

  .ant-breadcrumb-link {
    display: flex;
    align-items: center;
  }

  .ant-breadcrumb > span {
    display: flex;
    align-items: center;
  }

  .flag-icon {
    max-width: 100%;
  }

  .ant-typography code {
    margin: 0;
  }

  .ant-card {
    display: flex;
    flex-direction: column;
    border-radius: 4px;
    border-color: var(--border-color);

    .ant-card-head {
      border-bottom: 0;
    }

    .ant-card-body {
      flex-grow: 1;
    }

    .ant-card-grid {
      box-shadow: 1px 0 0 0 var(--border-color),
                  0 1px 0 0 var(--border-color),
                  1px 1px 0 0 var(--border-color),
                  1px 0 0 0 var(--border-color) inset,
                  0 1px 0 0 var(--border-color) inset;
    }
  }

  .ant-collapse-borderless {
    background: transparent;
  }

  .ant-table-tbody > tr .ant-table-wrapper:only-child .ant-table-tbody > tr > td:last-child {
    border-right: 0;
  }

  .ant-table .ant-table .ant-table-container {
    border-top: 0;
  }

  // Make tables scrollable if they are too big to be displayed.
  .ant-table-content {
    overflow-x: auto;
  }

  .ant-modal-body {
    padding: 16px 24px;
  }

  // Fix icon not aligned with text
  .ant-tree .ant-tree-node-content-wrapper .ant-tree-iconEle {
    vertical-align: initial;
  }

  .ant-statistic {
    .ant-statistic-content-prefix {
      margin-right: 16px;
    }

    .ant-statistic-content {
      font-size: 16px;
    }

    &.disabled {
      .ant-statistic-content {
        color: rgba(0, 0, 0, 0.45);
      }
    }
  }

  // Fix arrows of pagination controls not in the center
  .ant-pagination {
    display: flex;

    .ant-pagination-item-link {
      display: flex;
      align-items: center;
      justify-content: center;
    }
  }
}

